--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "auth",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -11,6 +12,7 @@
   "dependencies": {
     "@next-auth/mongodb-adapter": "^1.1.3",
     "bcryptjs": "^3.0.3",
+    "dotenv": "^17.2.3",
     "framer-motion": "^12.23.26",
     "jsonwebtoken": "^9.0.3",
     "lucide-react": "^0.562.0",
